--- a/index.html
+++ b/index.html
@@ -11,27 +11,26 @@
 
     <form action="" class="formStyle">
     <h1>Survey Form - Employee</h1>
-    Enter your name:
-    <input type="text" maxlength=40 value="">
+    <span class="s1">Enter your name:</span>
+    <input class="inp1" type="text" maxlength=40 value="">
     <br>
-    Enter your department:
-    <input type="text" maxlength=40 value="">
+    <span class="s2">Enter your department:</span>
+    <input class="inp2" type="text" maxlength=40 value="">
     <br>
-    Tell us a little about yourself:
-    <textarea name="Comments" cols=30 rows=3></textarea>
+    <span class="s3">Tell us a little about yourself:</span>
+    <textarea class="inp3" name="Comments" cols=30 rows=3></textarea>
     <br><br>
-    Do you exercise at home?
-    <input type="radio" name="exe" value=1>Yes
-    <input type="radio" name="exe" value=2>No
-    <br><br>
-    How do you like to read about your favorite topics?
-    <p>
+    <span style="font-size:16px">Do you exercise at home?</span>
+    <br>
+    <pre class="preTag"><input type="radio" name="exe" value=1>Yes <input type="radio" name="exe" value=2>No</pre>
+    <span style="font-size: 16px;">How do you like to read about your favorite topics?</span>
+    <p style="font-size: 16px">
         <input type="checkbox" name="Books">Books
         <input type="checkbox" name="Web">Online Resources
         <input type="checkbox" name="Phone">Phone Apps
         <input type="checkbox" name="Magazines">Magazines
     </p>
-    What genre of movies do you like?
+    <span style="font-size: 16px;">What genre of movies do you like?</span>
     <select class="selection" name="Movie" ><option>
         <option value=1 selected = "true">Comedy
         <option value=2 >Romance
